dsp/haskelldsp/Numeric/Special/Bessel_stub_ffi.h


extern double prim_bessel_Jnu(double nu,double x);

extern void* prim_bessel_Jnu_e(double nu,double x);

extern double access_prim_bessel_Jnu_e_val(HsPtr);

extern double access_prim_bessel_Jnu_e_err(HsPtr);

extern int access_prim_bessel_Jnu_e_gc_failed(HsPtr);

extern void* access_prim_bessel_Jnu_e_gc_failstring(HsPtr);

extern double prim_bessel_Ynu(double nu,double x);

extern void* prim_bessel_Ynu_e(double nu,double x);

extern double access_prim_bessel_Ynu_e_val(HsPtr);

extern double access_prim_bessel_Ynu_e_err(HsPtr);

extern int access_prim_bessel_Ynu_e_gc_failed(HsPtr);

extern void* access_prim_bessel_Ynu_e_gc_failstring(HsPtr);

extern double prim_bessel_Inu(double nu,double x);

extern void* prim_bessel_Inu_e(double nu,double x);

extern double access_prim_bessel_Inu_e_val(HsPtr);

extern double access_prim_bessel_Inu_e_err(HsPtr);

extern int access_prim_bessel_Inu_e_gc_failed(HsPtr);

extern void* access_prim_bessel_Inu_e_gc_failstring(HsPtr);

extern double prim_bessel_Inu_scaled(double nu,double x);

extern void* prim_bessel_Inu_scaled_e(double nu,double x);

extern double access_prim_bessel_Inu_scaled_e_val(HsPtr);

extern double access_prim_bessel_Inu_scaled_e_err(HsPtr);

extern int access_prim_bessel_Inu_scaled_e_gc_failed(HsPtr);

extern void* access_prim_bessel_Inu_scaled_e_gc_failstring(HsPtr);

extern double prim_bessel_Knu(double nu,double x);

extern void* prim_bessel_Knu_e(double nu,double x);

extern double access_prim_bessel_Knu_e_val(HsPtr);

extern double access_prim_bessel_Knu_e_err(HsPtr);

extern int access_prim_bessel_Knu_e_gc_failed(HsPtr);

extern void* access_prim_bessel_Knu_e_gc_failstring(HsPtr);

extern double prim_bessel_Knu_scaled(double nu,double x);

extern void* prim_bessel_Knu_scaled_e(double nu,double x);

extern double access_prim_bessel_Knu_scaled_e_val(HsPtr);

extern double access_prim_bessel_Knu_scaled_e_err(HsPtr);

extern int access_prim_bessel_Knu_scaled_e_gc_failed(HsPtr);

extern void* access_prim_bessel_Knu_scaled_e_gc_failstring(HsPtr);

extern double prim_bessel_lnKnu(double nu,double x);

extern void* prim_bessel_lnKnu_e(double nu,double x);

extern double access_prim_bessel_lnKnu_e_val(HsPtr);

extern double access_prim_bessel_lnKnu_e_err(HsPtr);

extern int access_prim_bessel_lnKnu_e_gc_failed(HsPtr);

extern void* access_prim_bessel_lnKnu_e_gc_failstring(HsPtr);

extern double prim_bessel_zero_J0(int s);

extern void* prim_bessel_zero_J0_e(int s);

extern double access_prim_bessel_zero_J0_e_val(HsPtr);

extern double access_prim_bessel_zero_J0_e_err(HsPtr);

extern int access_prim_bessel_zero_J0_e_gc_failed(HsPtr);

extern void* access_prim_bessel_zero_J0_e_gc_failstring(HsPtr);