dsp/haskelldsp/Numeric/Special/Bessel.hs


bessel_Jnu :: Double -> Double -> Double
bessel_Jnu nu x =
  unsafePerformIO(
    prim_bessel_Jnu nu x
    >>= \  y  ->
    (return (y)))
foreign import  ccall unsafe "Bessel_stub_ffi.h prim_bessel_Jnu" prim_bessel_Jnu :: Double -> Double -> IO (Double)

bessel_Jnu_e :: Double -> Double -> (Double,Double)
bessel_Jnu_e nu x =
  unsafePerformIO(
    prim_bessel_Jnu_e nu x
    >>= \ gc_result ->
    access_prim_bessel_Jnu_e_val (gc_result :: Addr) >>= \ val ->
    access_prim_bessel_Jnu_e_err (gc_result :: Addr) >>= \ err ->
    access_prim_bessel_Jnu_e_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
    access_prim_bessel_Jnu_e_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
    if ( gc_failed /= (0::Int))
    then unmarshall_string_ gc_failstring >>=  ioError  . userError
    else (return ((val,err))))
foreign import  ccall unsafe "Bessel_stub_ffi.h prim_bessel_Jnu_e" prim_bessel_Jnu_e :: Double -> Double -> IO (Addr)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_Jnu_e_val :: Addr -> IO (Double)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_Jnu_e_err :: Addr -> IO (Double)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_Jnu_e_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_Jnu_e_gc_failstring :: Addr -> IO (Addr)

-------------------------------------------------------------------------------

bessel_Ynu :: Double -> Double -> Double
bessel_Ynu nu x =
  unsafePerformIO(
    prim_bessel_Ynu nu x
    >>= \  y  ->
    (return (y)))
foreign import  ccall unsafe "Bessel_stub_ffi.h prim_bessel_Ynu" prim_bessel_Ynu :: Double -> Double -> IO (Double)

bessel_Ynu_e :: Double -> Double -> (Double,Double)
bessel_Ynu_e nu x =
  unsafePerformIO(
    prim_bessel_Ynu_e nu x
    >>= \ gc_result ->
    access_prim_bessel_Ynu_e_val (gc_result :: Addr) >>= \ val ->
    access_prim_bessel_Ynu_e_err (gc_result :: Addr) >>= \ err ->
    access_prim_bessel_Ynu_e_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
    access_prim_bessel_Ynu_e_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
    if ( gc_failed /= (0::Int))
    then unmarshall_string_ gc_failstring >>=  ioError  . userError
    else (return ((val,err))))
foreign import  ccall unsafe "Bessel_stub_ffi.h prim_bessel_Ynu_e" prim_bessel_Ynu_e :: Double -> Double -> IO (Addr)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_Ynu_e_val :: Addr -> IO (Double)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_Ynu_e_err :: Addr -> IO (Double)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_Ynu_e_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_Ynu_e_gc_failstring :: Addr -> IO (Addr)

-------------------------------------------------------------------------------

bessel_Inu :: Double -> Double -> Double
bessel_Inu nu x =
  unsafePerformIO(
    prim_bessel_Inu nu x
    >>= \  y  ->
    (return (y)))
foreign import  ccall unsafe "Bessel_stub_ffi.h prim_bessel_Inu" prim_bessel_Inu :: Double -> Double -> IO (Double)

bessel_Inu_e :: Double -> Double -> (Double,Double)
bessel_Inu_e nu x =
  unsafePerformIO(
    prim_bessel_Inu_e nu x
    >>= \ gc_result ->
    access_prim_bessel_Inu_e_val (gc_result :: Addr) >>= \ val ->
    access_prim_bessel_Inu_e_err (gc_result :: Addr) >>= \ err ->
    access_prim_bessel_Inu_e_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
    access_prim_bessel_Inu_e_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
    if ( gc_failed /= (0::Int))
    then unmarshall_string_ gc_failstring >>=  ioError  . userError
    else (return ((val,err))))
foreign import  ccall unsafe "Bessel_stub_ffi.h prim_bessel_Inu_e" prim_bessel_Inu_e :: Double -> Double -> IO (Addr)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_Inu_e_val :: Addr -> IO (Double)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_Inu_e_err :: Addr -> IO (Double)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_Inu_e_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_Inu_e_gc_failstring :: Addr -> IO (Addr)

-------------------------------------------------------------------------------

bessel_Inu_scaled :: Double -> Double -> Double
bessel_Inu_scaled nu x =
  unsafePerformIO(
    prim_bessel_Inu_scaled nu x
    >>= \  y  ->
    (return (y)))
foreign import  ccall unsafe "Bessel_stub_ffi.h prim_bessel_Inu_scaled" prim_bessel_Inu_scaled :: Double -> Double -> IO (Double)

bessel_Inu_scaled_e :: Double -> Double -> (Double,Double)
bessel_Inu_scaled_e nu x =
  unsafePerformIO(
    prim_bessel_Inu_scaled_e nu x
    >>= \ gc_result ->
    access_prim_bessel_Inu_scaled_e_val (gc_result :: Addr) >>= \ val ->
    access_prim_bessel_Inu_scaled_e_err (gc_result :: Addr) >>= \ err ->
    access_prim_bessel_Inu_scaled_e_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
    access_prim_bessel_Inu_scaled_e_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
    if ( gc_failed /= (0::Int))
    then unmarshall_string_ gc_failstring >>=  ioError  . userError
    else (return ((val,err))))
foreign import  ccall unsafe "Bessel_stub_ffi.h prim_bessel_Inu_scaled_e" prim_bessel_Inu_scaled_e :: Double -> Double -> IO (Addr)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_Inu_scaled_e_val :: Addr -> IO (Double)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_Inu_scaled_e_err :: Addr -> IO (Double)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_Inu_scaled_e_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_Inu_scaled_e_gc_failstring :: Addr -> IO (Addr)

-------------------------------------------------------------------------------

bessel_Knu :: Double -> Double -> Double
bessel_Knu nu x =
  unsafePerformIO(
    prim_bessel_Knu nu x
    >>= \  y  ->
    (return (y)))
foreign import  ccall unsafe "Bessel_stub_ffi.h prim_bessel_Knu" prim_bessel_Knu :: Double -> Double -> IO (Double)

bessel_Knu_e :: Double -> Double -> (Double,Double)
bessel_Knu_e nu x =
  unsafePerformIO(
    prim_bessel_Knu_e nu x
    >>= \ gc_result ->
    access_prim_bessel_Knu_e_val (gc_result :: Addr) >>= \ val ->
    access_prim_bessel_Knu_e_err (gc_result :: Addr) >>= \ err ->
    access_prim_bessel_Knu_e_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
    access_prim_bessel_Knu_e_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
    if ( gc_failed /= (0::Int))
    then unmarshall_string_ gc_failstring >>=  ioError  . userError
    else (return ((val,err))))
foreign import  ccall unsafe "Bessel_stub_ffi.h prim_bessel_Knu_e" prim_bessel_Knu_e :: Double -> Double -> IO (Addr)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_Knu_e_val :: Addr -> IO (Double)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_Knu_e_err :: Addr -> IO (Double)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_Knu_e_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_Knu_e_gc_failstring :: Addr -> IO (Addr)

-------------------------------------------------------------------------------

bessel_Knu_scaled :: Double -> Double -> Double
bessel_Knu_scaled nu x =
  unsafePerformIO(
    prim_bessel_Knu_scaled nu x
    >>= \  y  ->
    (return (y)))
foreign import  ccall unsafe "Bessel_stub_ffi.h prim_bessel_Knu_scaled" prim_bessel_Knu_scaled :: Double -> Double -> IO (Double)

bessel_Knu_scaled_e :: Double -> Double -> (Double,Double)
bessel_Knu_scaled_e nu x =
  unsafePerformIO(
    prim_bessel_Knu_scaled_e nu x
    >>= \ gc_result ->
    access_prim_bessel_Knu_scaled_e_val (gc_result :: Addr) >>= \ val ->
    access_prim_bessel_Knu_scaled_e_err (gc_result :: Addr) >>= \ err ->
    access_prim_bessel_Knu_scaled_e_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
    access_prim_bessel_Knu_scaled_e_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
    if ( gc_failed /= (0::Int))
    then unmarshall_string_ gc_failstring >>=  ioError  . userError
    else (return ((val,err))))
foreign import  ccall unsafe "Bessel_stub_ffi.h prim_bessel_Knu_scaled_e" prim_bessel_Knu_scaled_e :: Double -> Double -> IO (Addr)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_Knu_scaled_e_val :: Addr -> IO (Double)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_Knu_scaled_e_err :: Addr -> IO (Double)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_Knu_scaled_e_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_Knu_scaled_e_gc_failstring :: Addr -> IO (Addr)

-------------------------------------------------------------------------------

bessel_lnKnu :: Double -> Double -> Double
bessel_lnKnu nu x =
  unsafePerformIO(
    prim_bessel_lnKnu nu x
    >>= \  y  ->
    (return (y)))
foreign import  ccall unsafe "Bessel_stub_ffi.h prim_bessel_lnKnu" prim_bessel_lnKnu :: Double -> Double -> IO (Double)

bessel_lnKnu_e :: Double -> Double -> (Double,Double)
bessel_lnKnu_e nu x =
  unsafePerformIO(
    prim_bessel_lnKnu_e nu x
    >>= \ gc_result ->
    access_prim_bessel_lnKnu_e_val (gc_result :: Addr) >>= \ val ->
    access_prim_bessel_lnKnu_e_err (gc_result :: Addr) >>= \ err ->
    access_prim_bessel_lnKnu_e_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
    access_prim_bessel_lnKnu_e_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
    if ( gc_failed /= (0::Int))
    then unmarshall_string_ gc_failstring >>=  ioError  . userError
    else (return ((val,err))))
foreign import  ccall unsafe "Bessel_stub_ffi.h prim_bessel_lnKnu_e" prim_bessel_lnKnu_e :: Double -> Double -> IO (Addr)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_lnKnu_e_val :: Addr -> IO (Double)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_lnKnu_e_err :: Addr -> IO (Double)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_lnKnu_e_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_lnKnu_e_gc_failstring :: Addr -> IO (Addr)

-------------------------------------------------------------------------------

bessel_zero_J0 :: Int -> Double
bessel_zero_J0 s =
  unsafePerformIO(
    prim_bessel_zero_J0 s
    >>= \  y  ->
    (return (y)))
foreign import  ccall unsafe "Bessel_stub_ffi.h prim_bessel_zero_J0" prim_bessel_zero_J0 :: Int -> IO (Double)

bessel_zero_J0_e :: Int -> (Double,Double)
bessel_zero_J0_e s =
  unsafePerformIO(
    prim_bessel_zero_J0_e s
    >>= \ gc_result ->
    access_prim_bessel_zero_J0_e_val (gc_result :: Addr) >>= \ val ->
    access_prim_bessel_zero_J0_e_err (gc_result :: Addr) >>= \ err ->
    access_prim_bessel_zero_J0_e_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
    access_prim_bessel_zero_J0_e_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
    if ( gc_failed /= (0::Int))
    then unmarshall_string_ gc_failstring >>=  ioError  . userError
    else (return ((val,err))))
foreign import  ccall unsafe "Bessel_stub_ffi.h prim_bessel_zero_J0_e" prim_bessel_zero_J0_e :: Int -> IO (Addr)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_zero_J0_e_val :: Addr -> IO (Double)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_zero_J0_e_err :: Addr -> IO (Double)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_zero_J0_e_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_zero_J0_e_gc_failstring :: Addr -> IO (Addr)

-------------------------------------------------------------------------------
